src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/Bulk_Action_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Metadata configuration for Bulk Action, UI properties, Execution Flows are set for a bulk action using this metadata</description>
    <label>Bulk Action Configuration</label>
    <pluralLabel>Bulk Action Configurations</pluralLabel>
</CustomObject>