src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Action_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Flow_API_Name__c</fullName>
    <description>This is the Action Flow, this flow consists of the core action for the bulk action. This flow is REQUIRED.</description>
    <inlineHelpText>This is the Action Flow, this flow consists of the core action for the bulk action. This flow is REQUIRED.</inlineHelpText>
    <label>Action Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>