src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Custom_Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Custom_Success_Message__c</fullName>
    <description>Message to be displayed on UI if action flow is executing in async mode</description>
    <inlineHelpText>Message to be displayed on UI if action flow is executing in async mode</inlineHelpText>
    <label>Custom Success Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>