src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Eval_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Eval_Flow_API_Name__c</fullName>
    <description>This is the evaluation flow, defines the logic for the filter criteria for selected records, bulk action is performed only on records meeting criteria. This criteria is defined in evaluation flow. This flow is OPTIONAL.</description>
    <inlineHelpText>This is the evaluation flow, defines the logic for the filter criteria for selected records, bulk action is performed only on records meeting criteria. This criteria is defined in evaluation flow. This flow is OPTIONAL.</inlineHelpText>
    <label>Eval Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>