src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Eval_Flow_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Eval_Flow_Error_Message__c</fullName>
    <description>This is used to notify user output of the evaluation flow, this gives the reason why some of the records from selected records do not meet the eligibility criteria. Use summary of the criteria in evaluation flow to define this message.</description>
    <inlineHelpText>This is used to notify user output of the evaluation flow, this gives the reason why some of the records from selected records do not meet the eligibility criteria. Use summary of the criteria in evaluation flow to define this message.</inlineHelpText>
    <label>Eval Flow Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>