src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Input_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Input_Flow_API_Name__c</fullName>
    <description>This is the Input Flow, if bulk action needs any inputs from user, they are captured using input flow. This flow is OPTIONAL.</description>
    <inlineHelpText>This is the Input Flow, if bulk action needs any inputs from user, they are captured using input flow. This flow is OPTIONAL.</inlineHelpText>
    <label>Input Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>