src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Is_Action_Flow_Execution_in_Async_Mode__c.field-meta.xml
<CustomField>
    <fullName>Is_Action_Flow_Execution_in_Async_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if action flow is executing in async mode</description>
    <inlineHelpText>Indicates if action flow is executing in async mode</inlineHelpText>
    <label>Is Action Flow Execution in Async Mode?</label>
    <type>Checkbox</type>
</CustomField>