src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Object_API_Name__c.field-meta.xml
<!--
 Copyright 2024 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Name of the object for which bulk action is defined.</description>
    <inlineHelpText>Name of the object for which bulk action is defined</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>