src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Preview_Screen_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Preview_Screen_Button_Name__c</fullName>
    <description>Button name on the preview screen, use the label representing next action, for example if your bulk action has input flow to capture task fields, name should be &apos;Enter Task Details&apos; or bulk action do not have input flow and only have action flow, label can be &apos;Create Tasks for selected cases&apos;</description>
    <inlineHelpText>Button name on the preview screen, use the label representing next action, for example if your bulk action has input flow to capture task fields, name should be &apos;Enter Task Details&apos; or bulk action do not have input flow and only have action flow, label can be &apos;Create Tasks for selected cases&apos;</inlineHelpText>
    <label>Preview Screen Button Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>