src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Preview_Screen_Field_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Preview_Screen_Field_Set_API_Name__c</fullName>
    <description>API name of the field set used to show fields on the preview screen</description>
    <inlineHelpText>API name of the field set used to show fields on the preview screen</inlineHelpText>
    <label>Preview Screen Field Set API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>