src/bulk-actions-framework/main/default/objects/Bulk_Action_Configuration__mdt/fields/Required_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Permission__c</fullName>
    <description>This is the name of the custom permission, if user has this custom permission, clicking on bulk action button will show preview screen else user will get an error message.

If this field is blank, bulk action is available to all users.</description>
    <inlineHelpText>This is the name of the custom permission, if user has this custom permission, clicking on bulk action button will show preview screen else user will get an error message.

If this field is blank, bulk action is available to all users.</inlineHelpText>
    <label>Required Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>